--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon --watch './src/**/*.ts' --exec 'ts-node' ./src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.14.6",
+    "axios": "^1.3.4",
+    "cors": "^2.8.5",
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.21",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
+  }
 }
