--- a/server/package.json
+++ b/server/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/ngeohash": "^0.6.4",
     "@types/node": "^18.14.6",
     "axios": "^1.3.4",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "ngeohash": "^0.6.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.21",
