--- a/server/package.json
+++ b/server/package.json
@@ -13,14 +13,16 @@
   "dependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-    "@types/ngeohash": "^0.6.4",
     "@types/node": "^18.14.6",
     "axios": "^1.3.4",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "ngeohash": "^0.6.3"
+    "ngeohash": "^0.6.3",
+    "spotify-web-api-node": "^5.0.2"
   },
   "devDependencies": {
+    "@types/ngeohash": "^0.6.4",
+    "@types/spotify-web-api-node": "^5.0.7",
     "nodemon": "^2.0.21",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
